--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,11 @@
 name: build
-on: [push]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
   build-test:
     runs-on: "ubuntu-latest"
@@ -13,9 +19,4 @@ jobs:
       - name: Build optimized web application
         run: |
           npm ci
-          npm run dev
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: dist
-          path: dist
+          npm run build
