add npm run dev to CI actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,3 +17,7 @@ jobs:
       - name: install
         run: |
           npm install
+      - name: build
+        run: |
+          ls -la
+          npm run dev
