--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12'
-      - name: install
-        run: |
-          npm install
-      - name: build
-        run: |
-          ls -la
-          npm run build
+      - name: Install dependencies
+        run: npm ci
+      - name: Build the Project
+        run: npm run build
