--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,5 @@ jobs:
           node-version: '12'
       - name: Install dependencies
         run: npm ci
-      - name: Build the Project
+      - name: build
         run: npm run build
