--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
+      - uses: stefanoeb/eslint-action@1.0.2
+      - uses: stefanoeb/prettier@2.6.2
         with:
           node-version: '14'
       - name: Install dependencies
