--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,4 @@ jobs:
         run: npm ci
       - run: npm run build --if-present
       - run: npm test
-      - name: Install modules
-        run: yarn
-      - name: Run ESLint
-        run: yarn eslint . --ext .js,.jsx,.ts,.tsx
+      - run: npm run style:lint
