--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v3
+      - uses: eslint/github-action@v0
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
