--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,5 @@ jobs:
       - run: npm run build --if-present
       - run: npm test
       - run: npm run style:lint
+      - run: npm run style:lint
+      - run: npm run style:prettier
