--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon index.js",
     "test": "mocha",
     "style:lint": "eslint '**/*.{js,jsx,ts,tsx}'",
-    "style:prettier": "prettier --check '**/*.{js,jsx,ts,tsx}'",
+    "style:prettier": "prettier --check '**/*.{js,jsx,ts,tsx}'"
   },
   "author": "",
   "license": "ISC",
