--- a/.github/workflows/slint.yml
+++ b/.github/workflows/slint.yml
@@ -14,4 +14,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
+      - name: Install dependencies
+        run: npm ci
       - run: npm run style:lint
