--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,3 +18,5 @@ jobs:
         run: npm ci
       - run: npm run build --if-present
       - run: npm test
+      - name: Sonar-Scanner action
+        uses: LowCostCustoms/sonar-scanner-action@v2
