--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,5 @@ jobs:
           node-version: '14'
       - name: Install dependencies
         run: npm ci
-      - run: npm run build --if-present
+      - run: npm run start --if-present
       - run: npm test
